--- a/style/styles.css
+++ b/style/styles.css
@@ -1,44 +1,53 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-#body{
-    background-color: #F6F6F6;
+@import url(https://fonts.googleapis.com/css2?family=Roboto&display=swap);
+
+#body {
+    background-color: #f6f6f6
 }
-.class-title{
-    font-family: 'Roboto', sans-serif;
-    background-color: #5D5FEF;
-    color: #F8F8F8;
+
+.class-title {
+    font-family: Roboto, sans-serif;
+    background-color: #5d5fef;
+    color: #f8f8f8;
     font-weight: 700;
     border-radius: 10px;
-    padding: 8px 10px;
+    padding: 8px 10px
 }
-.nav-title{
-    font-family: 'Roboto', sans-serif;
-    color: #5D5FEF;
-    font-weight: 700;
+
+.nav-title {
+    font-family: Roboto, sans-serif;
+    color: #5d5fef;
+    font-weight: 700
 }
-.header-news{
-    font-family: 'Roboto', sans-serif;
+
+.header-news {
+    font-family: Roboto, sans-serif;
     text-decoration: none;
-    color: #5D5FEF;
+    color: #5d5fef;
     font-weight: 700;
-    margin-right: 10px;
+    margin-right: 10px
 }
-.header-blogs{
-    font-family: 'Roboto', sans-serif;
+
+.header-blogs {
+    font-family: Roboto, sans-serif;
     text-decoration: none;
-    color: #A3A3A3;
+    color: #a3a3a3;
     font-weight: 700;
-    margin-right: 10px;
+    margin-right: 10px
 }
-.nav-section{
-    border-bottom: 1px solid #CDCDCD;
+
+.nav-section {
+    border-bottom: 1px solid #cdcdcd
 }
-.nav a{
+
+.nav a {
     font-size: 18px;
-    color:#858585;
+    color: #858585
 }
-.icon{
-    color: #5D5FEF;
+
+.icon {
+    color: #5d5fef
 }
-.margin-top{
-    margin-top: 100px;
+
+.margin-top {
+    margin-top: 100px
 }
